# EngineTest

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt
dependencies/engine/: CMakeLists.txt  Engine.natvis  README.md
dependencies/engine/cmake/: CompilerWarnings.cmake  FindSDL2.cmake  Init.cmake  SetupResources.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
dependencies/engine/dependencies/SDL2/: CMakeLists.txt  SDL2.cmake
dependencies/engine/dependencies/SDL2/prebuilt/: CMakeLists.txt
dependencies/engine/dependencies/bgfx/: Builder.cmake  GeneratePrebuiltLibs.sh
dependencies/engine/dependencies/bgfx/prebuilt/: Prebuilt.cmake
dependencies/engine/dependencies/bgfx/prebuilt/linux/lib/cmake/bgfx/: bgfxConfigVersion.cmake  bgfxTargets-noconfig.cmake  bgfxTargets.cmake
dependencies/engine/dependencies/bgfx/prebuilt/windows/lib/: astc.lib  bimg.lib  bx.lib  edtaa3.lib  etc1.lib  etc2.lib  iqa.lib  nvtt.lib  pvrtc.lib  squish.lib
dependencies/engine/dependencies/bgfx/prebuilt/windows/lib/cmake/bgfx/: bgfxConfigVersion.cmake  bgfxTargets-debug.cmake  bgfxTargets.cmake
dependencies/engine/dependencies/flecs/: Builder.cmake  CMakeLists.txt  GeneratePrebuiltLibs.sh
dependencies/engine/dependencies/flecs/prebuilt/: CMakeLists.txt  Prebuilt.cmake
dependencies/engine/dependencies/flecs/prebuilt/windows/lib/: flecs.lib  flecs_static.lib
dependencies/engine/dependencies/flecs/prebuilt/windows/lib/x64/: flecs_static.lib
dependencies/engine/dependencies/glad/: Builder.cmake
dependencies/engine/dependencies/glad/source/: CMakeLists.txt
dependencies/engine/dependencies/glew/: Builder.cmake
dependencies/engine/dependencies/glew/prebuilt/: Prebuilt.cmake
dependencies/engine/dependencies/glm/: Builder.cmake  GeneratePrebuiltLibs.sh
dependencies/engine/dependencies/googletest/: CMakeLists.txt  CMakeLists.txt.in
dependencies/engine/dependencies/gtest/: CMakeLists.txt  gtest.cmake
dependencies/engine/dependencies/sdl2/: Builder.cmake  CMakeLists.txt  GeneratePrebuiltLibs.sh
dependencies/engine/dependencies/sdl2/prebuilt/: CMakeLists.txt  Prebuilt.cmake
dependencies/engine/dependencies/spdlog/: Builder.cmake  GeneratePrebuiltLibs.sh
dependencies/engine/dependencies/spdlog/prebuilt/: Prebuilt.cmake
dependencies/engine/dependencies/spdlog/prebuilt/linux/lib/cmake/spdlog/: spdlogConfigVersion.cmake
dependencies/engine/dependencies/spdlog/prebuilt/linux/lib/pkgconfig/: spdlog.pc
dependencies/engine/dependencies/spdlog/prebuilt/windows/lib/: spdlog.lib
dependencies/engine/dependencies/spdlog/prebuilt/windows/lib/cmake/spdlog/: spdlogConfigTargets.cmake
dependencies/engine/dependencies/spdlog/prebuilt/windows/lib/pkgconfig/: spdlog.pc
dependencies/engine/dependencies/stb/: Builder.cmake  CMakeLists.txt
dependencies/engine/dependencies/stb/source/: CMakeLists.txt
dependencies/engine/ecs/: RandomMovementSystem.cpp  RandomMovementSystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp
dependencies/engine/src/: Constants.hpp  Engine.cpp  Engine.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventQueue.cpp  EventQueue.hpp  Resource.hpp  Scene.hpp  TextureManager.cpp  TextureManager.hpp
dependencies/engine/src/container/: Array.hpp  FixedArray.hpp  List.hpp  ObjectArray.hpp  ObjectPool.cpp  ObjectPool.hpp  PODArray.hpp  PODVector.hpp  SortableObjectPool.hpp
dependencies/engine/src/core/: HashString.cpp  HashString.hpp  String.cpp  String.hpp  StringID.cpp  StringID.hpp
dependencies/engine/src/ecs/: ECS.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  IComponent.hpp  ISystem.hpp  SystemManager.cpp  SystemManager.hpp  TransformSystem.cpp  TransformSystem.hpp
dependencies/engine/src/file/: FileManager.cpp  FileManager.hpp
dependencies/engine/src/logger/: ConsoleLoggins.hpp  FileLogging.hpp  ILoggingStrategy.hpp
dependencies/engine/src/math/: Matrix4f.cpp  Matrix4f.hpp  Vector3f.hpp
dependencies/engine/src/memory/: unique_ptr.hpp
dependencies/engine/src/renderer/: Renderer.cpp  Renderer.hpp
dependencies/engine/src/rendering/: Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp  RenderingDevice.hpp  RenderingDeviceInfo.hpp  Shader.cpp  Shader.hpp  ShaderManager.hpp  Types.hpp
dependencies/engine/src/rendering/OpenGL/: ProgramGL.cpp  ProgramGL.hpp  RenderingDeviceGL.cpp  RenderingDeviceGL.hpp  RenderingDeviceInfoGL.cpp  RenderingDeviceInfoGL.hpp  ShaderGL.cpp  ShaderGL.hpp  ShaderManagerGL.cpp  ShaderManagerGL.hpp
dependencies/engine/src/utils/: Size.hpp
dependencies/engine/src/window/: OSWindow.cpp  OSWindow.hpp  OSWindowEvent.h  OSWindowManager.cpp  OSWindowManager.hpp  Utils.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
dependencies/engine/test/: ObjectPoolTest.hpp  main.cpp
dependencies/engine/test/container/: Array_test.cpp
src/: main.cpp
src/ecs/: ECS.h  Entity.cpp  Entity.h  System.h  TransformSystem.cpp  TransformSystem.h
test/: ObjectPool.hpp  ObjectPoolTest.hpp
vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EngineTest.sln  EngineTest.vcxproj  EngineTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vs/EngineTest.dir/Debug/EngineTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EngineTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vs/dependencies/engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Engine.sln  Engine_Static.vcxproj  Engine_Static.vcxproj.filters  cmake_install.cmake
vs/dependencies/engine/Debug/: Engine_Static.lib
vs/dependencies/engine/Engine_Static.dir/Debug/: Engine_Static.vcxproj.FileListAbsolute.txt
vs/dependencies/engine/dependencies/sdl2/: cmake_install.cmake
vs/dependencies/engine/dependencies/stb/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  STB.sln  cmake_install.cmake
vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+10 files in other folders)
